--- a/package.json
+++ b/package.json
@@ -196,7 +196,7 @@
     "ws": "^6.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tailwindcss -i ./src/CSS/input.css -o ./public/main.css --watch"
   },
   "author": "",
   "license": "ISC",
